0.8.0/_sources/gallery/drag_and_drop_python_code.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/drag_and_drop_python_code.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_drag_and_drop_python_code.py:


Drag and Drop Python Code Example
=================================

This example demonstrates how to execute a python script by drag'n'drop

To use this example, open napari and drag this file into the viewer.

.. tags:: interactivity

.. GENERATED FROM PYTHON SOURCE LINES 11-23



.. image-sg:: /gallery/images/sphx_glr_drag_and_drop_python_code_001.png
   :alt: drag and drop python code
   :srcset: /gallery/images/sphx_glr_drag_and_drop_python_code_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),

    <napari._qt.widgets.qt_viewer_dock_widget.QtViewerDockWidget object at 0x7f6cc5470830>





|

.. code-block:: Python

    from napari import Viewer
    from napari.types import ImageData


    def add_layers(img1: ImageData, img2: ImageData) -> ImageData:
        return img1 + img2

    viewer = Viewer()

    viewer.open_sample('napari', 'cells3d')
    viewer.window.add_function_widget(add_layers)



.. _sphx_glr_download_gallery_drag_and_drop_python_code.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: drag_and_drop_python_code.ipynb <drag_and_drop_python_code.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: drag_and_drop_python_code.py <drag_and_drop_python_code.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: drag_and_drop_python_code.zip <drag_and_drop_python_code.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
